fix: avatar on mobile screens

--- a/src/styles/profile/_index.scss
+++ b/src/styles/profile/_index.scss
@@ -90,7 +90,7 @@
 
   @media screen and (max-width: $tiny) {
     img {
-      width: 40%;
+      width: 80%;
     }
   }
 }
